--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,5 @@
 rootProject.name = 'open-platform-demo'
 
 // Include modules
-include "modules:axelor-contact"
+include "modules:axelor-person"
+include "modules:axelor-project"
