--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ application.copyright = Copyright (c) {year} Axelor. All Rights Reserved.
 # Header Logo
 # ~~~~~
 # Should be 40px in height with transparent background
-application.logo =
+application.logo = https://pbs.twimg.com/profile_images/1523312459/Logo_Twitter_ERP_Services_400x400.png
 
 # Home Website
 # Link to be used with header logo
