add csv import features

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
+# Application Information
+# ~~~~~
 application.name = Axelor DEMO
 application.description = The Demo Application
-application.version = 1.0.0
+application.version = 5.2.0
 
 # Author/Company
 # ~~~~~
@@ -10,15 +12,16 @@ application.copyright = Copyright (c) {year} Axelor. All Rights Reserved.
 # Header Logo
 # ~~~~~
 # Should be 40px in height with transparent background
-application.logo = https://pbs.twimg.com/profile_images/1523312459/Logo_Twitter_ERP_Services_400x400.png
+application.logo =
 
 # Home Website
+# ~~~~~
 # Link to be used with header logo
 application.home = http://www.axelor.com
 
 # Link to the online help
 # ~~~~~
-application.help = http://docs.axelor.com/adk
+application.help = http://docs.axelor.com
 
 # Application deployment mode
 # ~~~~~
@@ -38,7 +41,7 @@ application.locale =
 # Encryption
 # ~~~~~
 # Set encryption password
-encryption.password = MySuperSecretKey
+#encryption.password = MySuperSecretKey
 
 # Set encryption algorithm (CBC or GCM)
 #encryption.algorithm = CBC
@@ -50,22 +53,22 @@ encryption.password = MySuperSecretKey
 # PostgreSQL
 db.default.driver = org.postgresql.Driver
 db.default.ddl = update
-db.default.url = jdbc:postgresql://localhost:5432/axelordemo
+db.default.url = jdbc:postgresql://localhost:5432/open-platform-demo
 db.default.user = axelor
-db.default.password = axelor
+db.default.password =axelor
 
 # MySQL
 #db.default.driver = com.mysql.jdbc.Driver
 #db.default.ddl = update
-#db.default.url = jdbc:mysql://localhost:3306/axelor_demo_wip
-#db.default.user = username
-#db.default.password = secret
+#db.default.url = jdbc:mysql://localhost:3306/axelor_demo_dev
+#db.default.user = axelor
+#db.default.password =
 
 # Oracle
 #db.default.driver = oracle.jdbc.OracleDriver
 #db.default.ddl = update
 #db.default.url = jdbc:oracle:thin:@localhost:1521:oracle
-#db.default.user = username
+#db.default.user = axelor
 #db.default.password =
 
 # Date Format
@@ -117,19 +120,19 @@ file.upload.size = 5
 #
 # Regular expression
 # ~~~~~
-#file.upload.whitelist.pattern = \\.(xml|html|jpg|png|pdf|xsl)$
+#file.upload.whitelist.pattern =
 
 # Blacklist pattern can be used to block file upload with matching names.
 #
 # Regular expression
 # ~~~~~
-#file.upload.blacklist.pattern = ^\\.
+#file.upload.blacklist.pattern =
 
 # Whitelist content type can be used to allow file upload with matching content.
 #
 # List of mime-types (plain/text,image/*,video/webm)
 # ~~~~~
-#file.upload.whitelist.types = plain/text,image/*,video/webm
+#file.upload.whitelist.types =
 
 # Blacklist content type can be used to block file upload with matching content.
 #
@@ -194,13 +197,13 @@ ldap.user.filter = (uid={0})
 #auth.cas.server.url.prefix = https://localhost:8443/cas
 
 # use public accessible url
-#auth.cas.service = http://localhost:8080/open-platform-demo/cas
+#auth.cas.service = http://localhost:8080/axelor-demo/cas
 
 # login url, if not given prepared from server & service url
-#auth.cas.login.url = https://localhost:8443/cas/login?service=http://localhost:8080/open-platform-demo/cas
+#auth.cas.login.url = https://localhost:8443/cas/login?service=http://localhost:8080/axelor-demo/cas
 
 # logout url, if not given prepared from server & service url
-#auth.cas.logout.url = https://localhost:8443/cas/logout?service=http://localhost:8080/open-platform-demo/
+#auth.cas.logout.url = https://localhost:8443/cas/logout?service=http://localhost:8080/axelor-demo/
 
 # CAS validation protocol (CAS, SAML)
 #auth.cas.protocol = SAML
@@ -268,8 +271,11 @@ view.single.tab = false
 # Set menu style (left, top, both)
 view.menubar.location = both
 
-# Set to false to hide advance search filter share option
-#view.adv-search.share = true
+# Advance Filter Sharing
+# ~~~~~
+# Set to false to hide advance search filter share option, or set to list of
+# role names to enable share for those roles only.
+#view.adv-search.share = share-filter,can-share-filter
 
 # Logging
 # ~~~~~
