add features import data in button click event

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,8 +31,7 @@ application.mode = dev
 # CSS Theme
 # ~~~~~
 # Set default CSS theme, for example `blue`
-application.theme =
-
+application.theme = blue-max
 # Default Locale (language)
 # ~~~~~
 # Set default application locale (en, fr, fr_FR, en_US)
